--- a/FormulariosSimples/cadastro2.html
+++ b/FormulariosSimples/cadastro2.html
@@ -43,5 +43,8 @@
         <TEXTAREA NAME="observacoes" ROWS="5" COLS="60"></TEXTAREA><br>
         <INPUT TYPE="SUBMIT" VALUE="Enviar os dados">
         <INPUT TYPE="RESET" VALUE="Limpar os dados">
+            <iframe src="footer.html" frameborder="0"></iframe>
 </body>
+
+
 </html>
