--- a/FormulariosSimples/index.html
+++ b/FormulariosSimples/index.html
@@ -15,5 +15,9 @@
     <a href="cadastro.htlm">Clique aqui</a>
     <h3>Faça seu cadastro2</h3>
     <a href="Cadastro2.html">Clique aqui</a>
+    <iframe src="footer.html" frameborder="0"></iframe>
+
 </body>
+
+
 </html>
